--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="col-sm-6">
 					<label>02. Số hiệu bảo tàng cơ sở <span class="has-required"> (*)</span>:</label>
-					<span><input type="text" title="{{tooltips['soHieuBaoTangCS']}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form form-control"  id="soHisoHieuBaoTangCSeuBTTNVN"><span>
+					<span><input type="text" title="{{tooltips['soHieuBaoTangCS']}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form form-control"  id="soHisoHieuBaoTangCSeuBTTNVN"></span>
 				</div>
 			</div>
 			<div class="row">
@@ -770,7 +770,7 @@
 				<span class="glyphicon glyphicon-floppy-saved"></span> Lưu mẫu mới
 			</button>
 			<div class="pull-right">
-				<button id="back-to-top" type="button" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span> Top</button>
+				<button id="back-to-top" type="button" class="btn btn-circle btn-default"><span class="glyphicon glyphicon-chevron-up"></span> Top</button>
 			</div>
 		</center>	
 </form>
