--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -724,7 +724,9 @@
 				<span class="glyphicon glyphicon-floppy-saved"></span> Lưu mẫu mới
 			</button>
 			<div class="pull-right">
-				<button id="back-to-top" type="button" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span> Top</button>
+				<button id="back-to-top" type="button" class="btn btn-circle btn-default">
+                    <span class="glyphicon glyphicon-chevron-up"></span> Top
+                </button>
 			</div>
 		</center>
 	</div>
